k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msdemo
  namespace: dev
  labels:
          app: msdemo
spec:
  replicas: 1
  selector:
          matchLabels:
                  app: msdemo
  template:
    metadata:
      labels:
        app: msdemo
    spec:
      containers:
      - name: msdemo
        image:  uaemmx01/msdemo:0.0.1
        ports:
        - containerPort: 8085
        imagePullPolicy: Always
