k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msdemo
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    name: msdemo
