k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: msdemo
  namespace: dev
spec:
  rules:
  - host: ec2-54-81-13-249.compute-1.amazonaws.com
    http:
      paths:
      - path: /ASEKTConfiguracion-0.0.1-SNAPSHOT
        backend:
          serviceName: msdemo
          servicePort: 80
